...
            />
          )}
          {coordinates[0] && (
            <Marker
              coordinate={coordinates[0]}
              pinColor={Colors.accentGreen}
              title="Start"
            />
          )}
          {!live && coordinates.length > 1 && (
            <Marker
              coordinate={coordinates[coordinates.length - 1]}
              pinColor={Colors.accentRed}
...
